// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar should be able to render a toolbar 1`] = `
<div
  class="sc-ifAKCX fYqCVQ"
>
  <div
    class="toolbar"
  >
    <div
      class="sc-bxivhb eccFiY"
    >
      <button
        class="run-cell icon"
        role="menuitem"
      >
        <span>
          <svg
            height="16"
            style="fill: currentColor; display: inline-block; vertical-align: text-bottom;"
            viewBox="0 0 6 16"
            width="6"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Run Cell
            </title>
            <path
              d="M0 14l6-6-6-6z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="toolbar-dropdown"
  >
    <div
      class="sc-bdVaJa igpjjl"
    >
      <div
        class="sc-bwzfXH iaRngl"
      >
        <button>
          <span>
            <svg
              height="16"
              style="fill: currentColor; display: inline-block; vertical-align: text-bottom;"
              viewBox="0 0 10 16"
              width="10"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Show Additional Actions
              </title>
              <path
                d="M5 11L0 6l1.5-1.5L5 8.25 8.5 4.5 10 6z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="toolbar-end"
  >
    <div
      class="sc-bxivhb eccFiY"
    >
      <button
        class="delete-cell icon"
        role="menuitem"
      >
        <span>
          <svg
            height="16"
            style="fill: currentColor; display: inline-block; vertical-align: text-bottom;"
            viewBox="0 0 12 16"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Delete Cell
            </title>
            <path
              d="M11 2H9c0-.55-.45-1-1-1H5c-.55 0-1 .45-1 1H2c-.55 0-1 .45-1 1v1c0 .55.45 1 1 1v9c0 .55.45 1 1 1h7c.55 0 1-.45 1-1V5c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1zm-1 12H3V5h1v8h1V5h1v8h1V5h1v8h1V5h1v9zm1-10H2V3h9v1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Toolbar should be able to render a toolbar 2`] = `
<div
  class="sc-ifAKCX fYqCVQ"
>
  <div
    class="toolbar"
  >
    <div
      class="sc-bxivhb eccFiY"
    >
      <button
        class="run-cell icon"
        role="menuitem"
      >
        <span>
          <svg
            height="16"
            style="fill: currentColor; display: inline-block; vertical-align: text-bottom;"
            viewBox="0 0 6 16"
            width="6"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Run Cell
            </title>
            <path
              d="M0 14l6-6-6-6z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    class="toolbar-dropdown"
  >
    <div
      class="sc-bdVaJa igpjjl"
    >
      <div
        class="sc-bwzfXH iaRngl"
      >
        <button>
          <span>
            <svg
              height="16"
              style="fill: currentColor; display: inline-block; vertical-align: text-bottom;"
              viewBox="0 0 10 16"
              width="10"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Show Additional Actions
              </title>
              <path
                d="M5 11L0 6l1.5-1.5L5 8.25 8.5 4.5 10 6z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="sc-htpNat juMQnP"
      >
        <ul
          aria-label="dropdown-content"
          role="listbox"
        >
          <li
            role="presentation"
          >
            <div
              class="sc-bxivhb eccFiY"
            >
              <button
                class="clear-output text"
                disabled=""
                role="menuitem"
              >
                Clear Cell Output
              </button>
            </div>
          </li>
          <li
            role="presentation"
          >
            <div
              class="sc-bxivhb eccFiY"
            >
              <label
                aria-checked="true"
                class="toggle-input checked"
                role="menuitemcheckbox"
              >
                <input
                  aria-checked="true"
                  checked=""
                  role="menuitemcheckbox"
                  type="checkbox"
                />
                Show Cell Input
              </label>
            </div>
          </li>
          <li
            role="presentation"
          >
            <div
              class="sc-bxivhb eccFiY"
            >
              <label
                aria-checked="true"
                class="toggle-output checked"
                role="menuitemcheckbox"
              >
                <input
                  aria-checked="true"
                  checked=""
                  role="menuitemcheckbox"
                  type="checkbox"
                />
                Show Cell Output
              </label>
            </div>
          </li>
          <li
            role="presentation"
          >
            <div
              class="sc-bxivhb eccFiY"
            >
              <label
                aria-checked="false"
                class="toggle-output-expanded not-checked"
                role="menuitemcheckbox"
              >
                <input
                  aria-checked="false"
                  role="menuitemcheckbox"
                  type="checkbox"
                />
                Expanded Cell Output
              </label>
            </div>
          </li>
          <li
            role="presentation"
          >
            <div
              class="sc-bxivhb eccFiY"
            >
              <button
                class="change-to-markdown text"
                role="menuitem"
              >
                Convert to Markdown Cell
              </button>
            </div>
          </li>
          <li
            role="presentation"
          >
            <div
              class="sc-bxivhb eccFiY"
            >
              <label
                aria-checked="false"
                class="toggle-parameter not-checked"
                role="menuitemcheckbox"
              >
                <input
                  aria-checked="false"
                  role="menuitemcheckbox"
                  type="checkbox"
                />
                Is Parameter Cell
              </label>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    class="toolbar-end"
  >
    <div
      class="sc-bxivhb eccFiY"
    >
      <button
        class="delete-cell icon"
        role="menuitem"
      >
        <span>
          <svg
            height="16"
            style="fill: currentColor; display: inline-block; vertical-align: text-bottom;"
            viewBox="0 0 12 16"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Delete Cell
            </title>
            <path
              d="M11 2H9c0-.55-.45-1-1-1H5c-.55 0-1 .45-1 1H2c-.55 0-1 .45-1 1v1c0 .55.45 1 1 1v9c0 .55.45 1 1 1h7c.55 0 1-.45 1-1V5c.55 0 1-.45 1-1V3c0-.55-.45-1-1-1zm-1 12H3V5h1v8h1V5h1v8h1V5h1v8h1V5h1v9zm1-10H2V3h9v1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;
